--- a/src/components/LandingPage/_index.scss
+++ b/src/components/LandingPage/_index.scss
@@ -77,8 +77,10 @@ main {
 }
 
 .testimonial {
+  background: url(https://github.com/Cruxcodes/images-repository/blob/main/Group%2020.png?raw=true);
   background-repeat: no-repeat;
   background-position: right top;
+  background-size: cover;
   padding: 250px 0px;
 
   .comment {
@@ -162,7 +164,17 @@ main {
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
-          width: 50%;
+          width: 70px;
+          border-radius: 50%;
+          height: 70px;
+          transition: 0.5s;
+          &:hover {
+            box-shadow: 0px 24px 50px rgba(90, 90, 90, 0.849),
+              0px -24px 50px rgba(182, 182, 182, 0.938);
+            transform-origin: center;
+            width: 80px;
+            height: 80px;
+          }
         }
         img {
           width: 100%;
@@ -188,64 +200,77 @@ main {
     }
   }
 }
+.sec_twitter {
+  .section {
+    background-image: url(https://github.com/Cruxcodes/images-repository/blob/main/secondBg.png?raw=true);
+    background-size: cover, cover;
+    padding: 260px 0px;
+    background-position: top left;
+    //   background-attachment: fixed;
+    background-repeat: no-repeat;
+    color: white;
+    margin-bottom: 40px;
+    .info {
+      font-family: $jakarta;
+      width: 70%;
+      margin-left: auto;
 
-.section {
-  .info {
-    font-family: $jakarta;
-    width: 70%;
-    margin-left: auto;
-
-    h3 {
-      font-style: normal;
-      font-weight: 700;
-      font-size: 42px;
-      line-height: 150%;
-    }
-    p {
-      font-style: normal;
-      font-weight: 400;
-      font-size: 24px;
-      margin: 40px 0px;
-      line-height: 150%;
+      h3 {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 150%;
+      }
+      p {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 24px;
+        margin: 40px 0px;
+        line-height: 150%;
+      }
     }
   }
-}
 
-
-.twitter{
+  .twitter {
+    position: relative;
+    top: -120px;
     border-radius: 20px;
-    box-shadow:0px 2px 20px gray;
+    overflow: hidden;
+    // z-index: 10000;
+    background: white;
+    box-shadow: 0px 2px 20px gray;
     padding: 0px;
-    .top{
+    .top {
+      display: flex;
+      justify-content: space-between;
+      padding: 20px 40px;
+      background: #000;
+      background-repeat: no-repeat;
+      div {
         display: flex;
-        justify-content: space-between;
-        padding: 20px 40px ;
-        background: #000;
-        background-repeat: no-repeat;
-        div{
-            display: flex;
-            width: 40%;
-            align-items: center;
-            gap: 10px;
-            color: white;
-        }
-        a{
-            color: white;
-            background: #44B0FF;
-            padding: 5px 30px;
-            border-radius: 30px;
-        }
+        width: 40%;
+        align-items: center;
+        gap: 10px;
+        color: white;
+      }
+      a {
+        color: white;
+        background: #44b0ff;
+        padding: 5px 30px;
+        border-radius: 30px;
+      }
     }
-    .bottom{
-        padding: 50px 60px;
-        background: url('https://github.com/Cruxcodes/images-repository/blob/main/Mask%20group%20(1).png?raw=true');
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: top left;
-        display: flex;
-        justify-content: space-between;
-        img{
-            width: 30%;
-        }
+    .bottom {
+      padding: 50px 60px 90px;
+      background: url("https://github.com/Cruxcodes/images-repository/blob/main/Mask%20group%20(1).png?raw=true");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: top left;
+      display: flex;
+      justify-content: space-between;
+      img {
+        width: 30%;
+      }
     }
+  }
 }
