--- a/src/components/LandingPage/_index.scss
+++ b/src/components/LandingPage/_index.scss
@@ -30,24 +30,36 @@ main {
   background: url(https://github.com/Cruxcodes/images-repository/blob/main/Group%2064.png?raw=true);
   background-size: cover;
   background-position: right bottom;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  color: white;
+  height: 100vh;
   @media screen and (max-width: 1024px) {
     background-size: cover;
     background-position: 90%;
   }
-  background-attachment: fixed;
-  padding: 30px;
-  background-repeat: no-repeat;
-  color: white;
-  height: 100vh;
+  @media screen and (max-width: 768px) {
+    background-size: cover;
+    background-position: 80%;
+  }
+  @media screen and (max-width: 450px) {
+    text-align: center;
+  }
 
   .profile {
     display: flex;
     flex-direction: column;
     height: 100%;
-    justify-content: space-around;
+    justify-content: center;
 
     div {
       width: 60%;
+      @media screen and (max-width: 768px) {
+        width: 80%;
+      }
+      @media screen and (max-width: 500px) {
+        width: 100%;
+      }
 
       h5 {
         font-family: $inter;
@@ -61,8 +73,9 @@ main {
         font-size: 50px;
         line-height: 69px;
         margin: 20px 0px;
-        @media screen and (max-width: 500px) {
-          font-size: 10px;
+        @media screen and (max-width: 600px) {
+          font-size: 30px;
+          line-height: 40px;
         }
       }
       p {
@@ -71,6 +84,9 @@ main {
         font-weight: 300;
         line-height: 150%;
         width: 85%;
+        @media screen and (max-width: 500px) {
+          width: 100%;
+        }
       }
     }
   }
@@ -83,6 +99,10 @@ main {
   background-size: cover;
   padding: 250px 0px;
 
+  @media screen and (max-width: 768px) {
+    padding: 100px 0px;
+  }
+
   .comment {
     position: relative;
     font-family: $inter;
@@ -93,6 +113,12 @@ main {
     font-size: 32px;
     color: $heading-color;
 
+    @media screen and (max-width: 768px) {
+      font-size: 26px;
+    }
+    @media screen and (max-width: 480px) {
+      font-size: 20px;
+    }
     &::before {
       position: absolute;
       content: url(https://github.com/Cruxcodes/images-repository/blob/main/tick.png?raw=true);
@@ -103,7 +129,7 @@ main {
     &::after {
       position: absolute;
       content: url(https://github.com/Cruxcodes/images-repository/blob/main/backtick.png?raw=true);
-      bottom: -25%;
+      bottom: -15%;
       right: 2%;
     }
   }
@@ -135,6 +161,15 @@ main {
     display: grid;
     margin: 30px auto;
     grid-template-columns: 700px 700px 700px 700px;
+    @media screen and (max-width: 768px) {
+      grid-template-columns: 500px 500px 500px 500px;
+    }
+    @media screen and (max-width: 500px) {
+      grid-template-columns: 400px 400px 400px 400px;
+    }
+        @media screen and (max-width: 400px) {
+      grid-template-columns: 300px 300px 300px 300px;
+    }
     grid-template-rows: 1fr;
     color: white;
     gap: 30px;
@@ -155,6 +190,11 @@ main {
       background: rgba(0, 0, 0, 0.288);
       backdrop-filter: blur(2px);
       right: 0px;
+
+      @media screen and (max-width: 500px) {
+        width: 50px;
+        backdrop-filter: none;
+      }
     }
     .video {
       .img {
@@ -195,6 +235,14 @@ main {
           font-weight: 400;
           font-size: 20px;
           line-height: 25px;
+        }
+        @media screen and (max-width: 500px) {
+          h3 {
+            font-size: 20px;
+          }
+          p {
+            font-size: 16px;
+          }
         }
       }
     }
